# doc2readme

./: Cargo.toml  README.md  bla.md  deny.toml  text.md
.github/workflows/: cargo-doc2readme.yml  rust.yml
assets/bare/src/: main.rs
assets/basic/: Cargo.toml  README.md
assets/basic/src/: main.rs
assets/readmes/: schmargs.md
doc2readme/: Cargo.toml
html2md/: Cargo.toml
html2md/src/: lib.rs
html2md/tests/: styles.rs
src/: DEFAULT_TEMPLATE.tpl  ahandler.rs  anchor_handler.rs  code_handler.rs  convert.rs  header_handler.rs  main.rs  manifest.rs  markdown.rs  parser.rs
tests/: test.rs
