[package]
name = "cargo-doc2readme"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
cargo_toml = "0.17.2"
# Patched because of a whitespace issue
html2md = { version = "0.2.14", git = "https://github.com/Property404/html2md", rev = "49ff1eb" }
markup5ever_rcdom = "0.2.0"
minijinja = "1.0.10"
once_cell = "1.19.0"
regex = "1.10.2"
schmargs = { git = "https://github.com/Property404/schmargs", rev = "0cae9ebb" }
scraper = {version = "0.18.1", default-features = false }
url = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.12"
fs_extra = "1.3.0"
tempfile = "3.9.0"
pretty_assertions = "1.4.0"
